First set of scripts uploaded

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 .Rhistory
 .RData
 .Ruserdata
+data/tax_matrices/*
+data/seq_matrices/*
+data/rmp_matrices/*
+data/qmp_matrices/*
+data/metadata_matrices/*
+data/qmp2_matrices/*
+data/correlations_taxontaxon/*
+data/correlations_taxonmetadata/*
+output/taxontaxon/*
+output/taxonmetadata/*
+output/alpha_div/*
+output/rawdataplots/*
+output/qmp_qmpnr/*
+output/number_samples/*
+output/microbial_spread/*
